# jaxcrepe

./: .gitignore  README.md  pyproject.toml
jaxcrepe/: __main__.py  convert.py  core.py  load.py  model.py  threshold.py
scripts/: benchmark.py
src/jaxcrepe/: convert.py  decode.py  load.py  loudness.py  model.py
src/jaxcrepe/assets/: tiny.eqx
tests/: conftest.py  test_core.py  test_decode.py  test_filter.py  test_threshold.py
